@@ -4,6 +4,7 @@
 
 === 1.0.6 ===
 * Added opacity manipulation to the lsp::Color class.
+* Added LSPString::range_length() method to compute the length of the range.
 
 === 1.0.5 ===
 * Updated PrefixLoader interface and implementation.
